--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="<%= BASE_URL %>qglogo.png">
+    <title>安康打卡数据可视化分析平台</title>
+    <script src="//a.amap.com/jsapi_demos/static/resource/heatmapData.js"></script>
+    <script src="https://webapi.amap.com/maps?v=1.4.4&key=96229f005826740eab888ed632918943"></script>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
